Adicionando a seção de experiência e alterações na área de cursos e certificados

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
                 </ul>
             </div>
         </nav>
-        <section id="formacao"><!-- Inicio do section formação -->
+        <section id="formacao"><!-- Inicio do section experiencia -->
             <div class="container"> <!-- Inicio container -->
                 <br><br>
                 <h1 class="display-4">Formação</h1>
@@ -92,6 +92,40 @@
                     <div class="col-sm-3">
                         <p class="lead">Formado</p>
                         <p>2015-2017</p>
+                    </div>
+                </div>
+            </div><!-- Fim container -->
+        </section> <!-- Fim do section experieência -->
+        <hr>
+        <section id="experiencia"><!-- Inicio do section formação -->
+            <div class="container"> <!-- Inicio container -->
+                <br><br>
+                <h1 class="display-4">Experiência</h1>
+                <br><br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Grupo BRT</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p class="lead font-weight-bold">Desenvolvedor JR</p>
+                        <p>Atividades: Programação WEB em HTML5, CSS3(Bootstrap), JavaScript(jQuery, VueJS, Angular), PHP (Laravel 4.4 e 5.8), GIT e desenvolvimento de software ágil com metodologia Kanban</p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p class="lead">De Junho de 2019 até Agosto de 2019</p>
+                        <p>Motivo de saída em dois meses: tempo para deslocamento até a Universidade.</p>
+                    </div>
+                </div>
+                <br/>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">FACIAP</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p class="lead font-weight-bold">Programa de pré-aceleração de StartUp</p>
+                        <p>Atividades: Desenvolvimento de API RESTful com Laravel e Vue Components</p> 
+                    </div>
+                    <div class="col-sm-3">
+                        <p class="lead">De Maio de 2019 até Julho de 2019</p>
                     </div>
                 </div>
             </div><!-- Fim container -->
@@ -202,6 +236,84 @@
                         <p>Certificado de conclusão disponível em breve</p>
                     </div>
                 </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Iniciando com Laravel 5.5 - SchoolOfNet</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>Conteúdo/atividades:  Definição de rotas, views, blade template, Artisan, models, controllers, CRUD com Eloquent ORM.</p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856/Laravel" class="text-info">Visite o repositório desse curso no meu github</a></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p><a class="lead" href="https://www.schoolofnet.com/validar-certificado/?certificate=bf2a94d9-a576-4bfd-bdd9-8e7c0b508043">Certificado</a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Iniciando com MongoDB - SchoolOfNet</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>Conteúdo/atividades:  NOSQL e MongoDB, MongoShell, tipos de dados, validações, collections, CRUD, relação entre documentos e agregações.</p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p><a class="lead" href="https://www.schoolofnet.com/validar-certificado/?certificate=bf2a94d9-a576-4bfd-bdd9-8e7c0b508043">Certificado</a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Laravel - Autenticação - SchoolOfNet</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>Conteúdo/atividades:  Criação de auth com php artisan make:auth, criação de autenticacão manual, extensão socialite, autorização e token.</p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856/Laravel" class="text-info">Visite o repositório desse curso no meu github</a></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p><a class="lead" href="https://www.schoolofnet.com/validar-certificado/?certificate=888f9229-1a88-41a5-8275-c7e7b683ad47">Certificado</a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Laravel - Eloquent ORM - SchoolOfNet</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>Conteúdo/atividades: Mass assignment com fillable, relaciomanetos: many to one, one to many, many to many e one to one, factories e seeders, query builder e collections.</p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856/Laravel" class="text-info">Visite o repositório desse curso no meu github</a></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p><a class="lead" href="https://www.schoolofnet.com/validar-certificado/?certificate=6143e31b-41c0-4c9f-a8ed-bdae08b9430e">Certificado</a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Iniciando com Vue.js 2 - SchoolOfNet</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>Conteúdo/atividades: A instância Vue, propriedade data, data binding, two way data binding, v-for, diretivas condicionais, filtros, propriedade Computed, ordenando tabelas e filtro de busca.</p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856/Vue.js" class="text-info">Visite o repositório desse curso no meu github</a></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p><a class="lead" href="https://www.schoolofnet.com/validar-certificado/?certificate=6143e31b-41c0-4c9f-a8ed-bdae08b9430e">Certificado</a></p>
+                    </div>
+                </div>
+                <br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">Desenvolvimento de APIs RESTFul com Laravel - SchoolOfNet</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p>Conteúdo/atividades: RESTful e protocolo HTTP, end-points, CRUD, trabalhando com mais de um resource, validações, Laravel Passport, Vue Components do Laravel Passport e requisição de token, cache do resultado, liberando o CORS.</p>
+                        <p><a target="_blank" href="https://github.com/nicolasteixeira3856/Laravel" class="text-info">Visite o repositório desse curso no meu github</a></p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p><a class="lead" href="https://www.schoolofnet.com/validar-certificado/?certificate=ddc8aaea-fa79-47ec-ab84-e722bed4619e">Certificado</a></p>
+                    </div>
+                </div>
+                <br>
             </div><!-- Fim container -->
         </section> <!-- Fim do section cursos e certificados -->
         <hr>
