Adicionando a seção de experiência e alterações na área de cursos e certificados

--- a/index.html
+++ b/index.html
@@ -49,6 +49,9 @@
                     <a class="nav-link text-info" href="#formacao">Formação</a>
                 </li>
                 <li class="nav-item">
+                    <a class="nav-link text-info" href="#experiencia">Experiência</a>
+                </li>
+                <li class="nav-item">
                     <a class="nav-link text-info" href="#habilidades">Habilidades</a>
                 </li>
                 <li class="nav-item">
@@ -108,7 +111,7 @@
                     </div>
                     <div class="col-sm-5">
                         <p class="lead font-weight-bold">Desenvolvedor JR</p>
-                        <p>Atividades: Programação WEB em HTML5, CSS3(Bootstrap), JavaScript(jQuery, VueJS, Angular), PHP (Laravel 4.4 e 5.8), GIT e desenvolvimento de software ágil com metodologia Kanban</p>
+                        <p>Atividades: Programação WEB em HTML5, CSS3(Bootstrap), JavaScript(VanillaJS, jQuery, ECMAScript6, VueJS, Angular), PHP (Laravel 4.4 e 5.8), GIT e desenvolvimento de software ágil com metodologia Kanban</p>
                     </div>
                     <div class="col-sm-3">
                         <p class="lead">De Junho de 2019 até Agosto de 2019</p>
