--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                     </div>
                     <div class="col-sm-5">
                         <p class="lead font-weight-bold">Tecnologia em Análise e Desenvolvimento de Sistemas</p>
-                        <p>Atividades:</p>
+                        <!-- <p>Atividades:</p> -->
                         <p><a target="_blank" href="https://github.com/nicolasteixeira3856" class="text-info">Visite também o meu github</a></p>
                     </div>
                     <div class="col-sm-3">
@@ -105,6 +105,19 @@
                 <br><br>
                 <h1 class="display-4">Experiência</h1>
                 <br><br>
+                <div class="row">
+                    <div class="col-sm-4">
+                        <p class="font-weight-bold">MadeiraMadeira</p>
+                    </div>
+                    <div class="col-sm-5">
+                        <p class="lead font-weight-bold">Desenvolvedor de Sistemas</p>
+                        <p>Atividades: Desenvolvimento/manutenção de sistemas WEB (Stack LAMP) com as seguintes linguagens e ferramentas: HTML5, CSS(Bootstrap), JavaScript (jQuery, Vue.JS, Axios), PHP (Zend Framework 2 e 3, Zend Expressive 3, OO), Doctrine ORM, Redis, ElasticSearch, AWS(EC2, SQS, S3, Lambda), Webpack, Yarn/NPM, Python(para análise, manutenção e desenvolvimento de Lambda), Docker, Git. Padrões de arquitetura e práticas: DDD, TDD, BDD, PSR's, SOLID, Hexagonal Arquitecture, CQRS, Object Calisthenics.</p>
+                    </div>
+                    <div class="col-sm-3">
+                        <p class="lead">De Setembro de 2019 até o momento</p>
+                    </div>
+                </div>
+                <br/>
                 <div class="row">
                     <div class="col-sm-4">
                         <p class="font-weight-bold">Grupo BRT</p>
@@ -140,82 +153,10 @@
                 <h1 class="display-4">Habilidades</h1>
                 <br><br>
                 <div class="row">
-                    <div class="col-lg-6">
-                        <h4 class="font-weight-bold">HTML5</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 100%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">100%</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-responsivo">
-                        <h4 class="font-weight-bold">CSS3</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
-                        </div>
+                    <div class="col-lg-12">
+                        <h5 class="font-weight-bold">HTML5, CSS, PHP (frameworks: Laravel, Zend Framework, Zend Expressive), JavaScript, NodeJS, banco de dados (SQL e NoSQL), Shell Script, Python, ReactJS, React Native, VueJS, JQuery, Axios, Bootstrap, Vuetify, Doctrine ORM, Eloquent ORM, Redis, ElasticSearch, Webpack, Yarn/NPM, Docker, Git, Jira, Confluence, Trello, Slack, Scrum, Linux(Debian/Ubuntu/Fedora/Manjaro) e nos padrões de projeto/arquitetura e práticas: MVC, DDD, PSR's, SOLID, Hexagonal Architecture, CQRS, Object Calisthenics.</h5>
                     </div>
                 </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h4 class="font-weight-bold">JavaScript</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-responsivo">
-                        <h4 class="font-weight-bold">ECMAScript 6 - OO</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 50%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">50%</div>
-                        </div>  
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h4 class="font-weight-bold">*PHP 7</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 60%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">60%</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-responsivo">
-                        <h4 class="font-weight-bold">SQL</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h4 class="font-weight-bold">Bootstrap</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 90%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">90%</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-responsivo">
-                        <h4 class="font-weight-bold">JQuery</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 70%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">70%</div>
-                        </div>
-                    </div>
-                </div>
-                <br>
-                <div class="row">
-                    <div class="col-lg-6">
-                        <h4 class="font-weight-bold">Diagramação UML</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 80%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">80%</div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6 col-responsivo">
-                        <h4 class="font-weight-bold">**Desenvolvimento mobile</h4>
-                        <div class="progress">
-                            <div class="progress-bar bg-info" role="progressbar" style="width: 20%;" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100">20%</div>
-                        </div>
-                    </div>  
-                </div>
-                <br><br>
-                <p class="mb-0">*A seção de PHP inclui conhecimentos em: código estruturado, orientação a objetos, PDO, consumo de webservices e padrão MVC.</p>
-                <p class="mb-0">**A seção de desenvolvimento mobile inclui conhecimentos em: Desenvolvimento Android com Java (utilizando a IDE Android Studio) e Ionic.</p>
                 <br>
                 <span class="font-weight-bold">Visite a seção <a href="#projetos">PROJETOS</a> para visualizar os trabalhos que realizei com minhas habilidades</span>
             </div><!-- Fim container -->
