Bug fix for the see more button

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <span class="titulo d-inline-block">
                 Portfólio Nícolas Teixeira
                 <br>
-                <a href="#formacao" class="btn btn-info">Veja mais</a>
+                <a href="#languageTab" class="btn btn-info">Veja mais</a>
             </span>
         </div>
     </div>
